Finished researching data and algorithims, opened new notebook for building the model. to do: test on 2018 data and continue to the next stage

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 data/raw/Wednesday-workingHours.pcap_ISCX.csv
+data/raw/Friday-WorkingHours-Afternoon-PortScan.pcap_ISCX.csv
+data/raw/Thursday-WorkingHours-Morning-WebAttacks.pcap_ISCX.csv
+data/raw/Tuesday-WorkingHours.pcap_ISCX.csv
