Updated IDS model, real-time sniffer & GUI dashboard
Key Changes:
- **Model Optimization (Lightweight):**
  - reduced feature set (9 features vs 70+).

- **Real-Time Sniffer (v2):**
  - Implemented 'Flow Aging' mechanism
  - Integrated Scapy for live packet capture on the physical network interface.

- **Interactive Dashboard (Tkinter):**
  - Created GUI for monitoring alerts and controlling the system.
  - Added "Attack Simulation" panel to launch DoS, PortScan, BruteForce, and Web Attacks.

- **Attack Simulations:**
  - Developed targeted Python scripts to simulate specific attack vectors (DoS, PortScan, FTP Brute Force, WebAttack).

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ data/raw/Tuesday-WorkingHours.pcap_ISCX.csv
 data/raw/02-15-2018.csv
 src/__pycache__/config.cpython-313.pyc
 src/__pycache__/engine.cpython-313.pyc
+data/processed/master_dataset.csv
+src/Interface/__pycache__/sniffer_service.cpython-313.pyc
